<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>junxutils</groupId>
  <artifactId>app</artifactId>
  <version>1.1.0</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <cli.library.revision>1.8.0</cli.library.revision>
    <java.version>21</java.version>
  </properties>
  <build>
      <resources>
          <resource>
              <directory>src/main/resources</directory>
              <filtering>true</filtering>
          </resource>
      </resources>
      <finalName>redist/libs/app-${project.version}</finalName>
      <plugins>
          <plugin>
              <groupId>cli-library</groupId>
              <artifactId>cli-maven-plugin</artifactId>
              <version>${cli.library.revision}</version>
              <executions>
                  <execution>
                      <goals>
                          <goal>generate-files</goal>
                      </goals>
                  </execution>
              </executions>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-resources-plugin</artifactId>
              <version>2.7</version>
          </plugin>
          <plugin>
              <artifactId>maven-dependency-plugin</artifactId>
              <executions>
                  <execution>
                      <phase>install</phase>
                      <goals>
                          <goal>copy-dependencies</goal>
                      </goals>
                      <configuration>
                          <outputDirectory>${project.build.directory}/redist/libs</outputDirectory>
                      </configuration>
                  </execution>
              </executions>
          </plugin>
      </plugins>
      <pluginManagement>
          <plugins>
              <plugin>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <version>3.1</version>
                  <configuration>
                      <source>${java.version}</source>
                      <target>${java.version}</target>
                      <useIncrementalCompilation>false</useIncrementalCompilation>
                  </configuration>
              </plugin>
          </plugins>
      </pluginManagement>
  </build>
  <dependencies>
      <dependency>
          <groupId>cli-library</groupId>
          <artifactId>cli-command-library</artifactId>
          <version>${cli.library.revision}</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
      <dependency>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
          <version>1.18.30</version>
      </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-api</artifactId>
          <version>5.10.1</version>
          <scope>test</scope>
      </dependency>
  </dependencies>

</project>
